--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,47 @@ body{
   padding:10px;
   background:#4167b2;
 }
+
+.Input ,.Post{
+  border:1px solid hsl(216,8%,88%);
+  border-radius:4px;
+  width: 576px;
+  margin: 26px auto;
+  background-color: white; 
+}
+
+.Input__header{
+  background-color: #F5F6F7;
+  border-bottom: 1px solid #dddfe2;
+  border-radius: 2px 2px 0 0;
+  margin: 0;
+  padding: 15px;
+}
+.Input__field{
+  width:100%;
+  height : 100px;
+  padding:10px;
+  font-size: 20px;
+  background-color: #FFFFFF;
+  border: none;
+}
+
+.Input__field.focus{
+  outline:none;
+}
+
+.Post{
+  padding: 15px;
+}
+
+.Post__image{
+  width:100%;
+  margin-top: 15px;
+}
+.Post__Delete{
+border:none;
+background:none;
+padding:0;
+float: right;
+cursor: pointer;
+}
